Opened 19 years ago

Closed 18 years ago

Last modified 18 years ago

#601 closed bug (fixed)

[Becasso] cannot open file /boot/home/config/lib/libz.so

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: - General Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

When i try to start from terminal is says

/boot/apps/Becasso>Becasso runtime_loader: cannot open file /boot/home/config/lib/libz.so /boot/apps/Becasso>

but libz.so is in /boot/beos/system/lib folder

Change History (4)

comment:1 by axeld, 19 years ago

Yes, but the search path let it look it up in boot/home/config/lib first. Dunno why this message is printed, though, I'll have a look.

comment:2 by axeld, 18 years ago

Status: newclosed

comment:3 by axeld, 18 years ago

Turns out Becasso (and BeOS) are both broken - we now deviate from the ELF specs a bit and give shared libraries with a specified path another chance to be found in the standard search directories. Fixed in hrev17669.

comment:4 by axeld, 18 years ago

Resolution: fixed
Note: See TracTickets for help on using tickets.