Unlike the ELF specs, BeOS ignores the path of shared objects specified by the DT_NEEDED element. We now soften the rule that the absolute path should be used, and give libraries another chance and search them in the standard search paths. This fixes bug #601 and lets Becasso run on Haiku.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@17669 a95241bf-73f2-0310-859d-f6bbb57e9c96